--- a/example.html
+++ b/example.html
@@ -1,53 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>shaped.js example</title>
-  <script src="./dist/shaped.js"></script>
-  <style>
-    html, body {
-      width: 100vw;
-      height: 100vh;
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-</head>
-<body>
-<canvas id="canvas"></canvas>
-<script>
-  const CONFIG = {
-    lines: [
-      {
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>shaped.js example</title>
+    <style>
+      html, body {
+        width: 100vw;
+        height: 100vh;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
+    <script type="module">
+      import { ShapedCanvas } from "./pkg/dist-web/index.bundled.js"
+
+      new ShapedCanvas(document.querySelector("#canvas"), {
         minCount: 8,
-        probability: 1 / 50000,
+        probability: 1 / 40000,
         colors: [
-          "rgba(0, 0, 0, 0.8)",
+          "rgba(0, 0, 0, 0.7)",
           "rgba(0, 255, 150, 0.8)",
           "rgba(0, 150, 255, 0.7)"
         ],
         height: 50,
         length: 50,
-        speed: [0.2, 0.4],
-        randomizeYAfterLeave: true
-      },
-      {
-        probability: 1 / 100000,
-        colors: [
-          "rgba(0, 150, 255, 0.2)",
-          "rgba(0, 255, 150, 0.2)"
-        ],
-        height: 50,
-        length: 50,
-        speed: 0.2,
-        randomizeYAfterLeave: true
-      }
-    ],
-    fillWindowSize: true
-  };
-
-  new Shaped.Canvas(document.querySelector("#canvas"), CONFIG);
-</script>
-</body>
+        speed: [0.2, 0.8],
+        randomizeYAfterLeave: true,
+        useWindowSize: false
+      });
+    </script>
+  </body>
 </html>
